rework Java part after review